[package]
name = "texturizers"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.97"
slint = { version = "1.10.0", features = ["serde"] }
image = "0.25.5"
env_logger = "0.11.5"
log = "0.4.22"
home = "0.5.11"
glob = "0.3.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
slint-build = "1.8.0"
